[gd_scene load_steps=13 format=3 uid="uid://7vj7j78xlqhk"]

[ext_resource type="Texture2D" uid="uid://b26j2gdbay1hm" path="res://asset/UI/登录界面背景.jpg" id="1_3eocb"]
[ext_resource type="Script" path="res://pages/register/register.gd" id="1_xhga2"]
[ext_resource type="Texture2D" uid="uid://b7ttukf0e7bxk" path="res://asset/UI/knitting.png" id="2_dut6v"]
[ext_resource type="FontFile" uid="uid://60pqlkcutjgj" path="res://asset/fonts/PoiretOne-Regular.ttf" id="3_8he73"]
[ext_resource type="FontFile" uid="uid://cmoj7ex21pgtg" path="res://asset/fonts/思源宋体 CN-Medium.otf" id="4_a4dtk"]
[ext_resource type="Theme" uid="uid://binru6c1n3q16" path="res://asset/themes/line_edit.tres" id="5_68tje"]
[ext_resource type="StyleBox" uid="uid://iojglv7pkeld" path="res://asset/themes/register.tres" id="6_b4acp"]
[ext_resource type="Theme" uid="uid://bggg8eaejujge" path="res://asset/themes/label.tres" id="8_kevcj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vu0iw"]
texture = ExtResource("1_3eocb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejih3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccyk0"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.423529, 0.423529, 0.423529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mi7qx"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhga2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vu0iw")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
texture = ExtResource("2_dut6v")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_8he73")
theme_override_font_sizes/font_size = 72
text = "Link Weave"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_a4dtk")
theme_override_font_sizes/font_size = 36
text = "你的故事，只由你写"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(700, 550)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ejih3")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_a4dtk")
theme_override_font_sizes/font_size = 40
text = "密码登录"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="usename" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_68tje")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ccyk0")
placeholder_text = "请输入账号名"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="password" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_68tje")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ccyk0")
placeholder_text = "请输入密码"

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_a4dtk")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("6_b4acp")
theme_override_styles/hover = ExtResource("6_b4acp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mi7qx")
theme_override_styles/disabled = ExtResource("6_b4acp")
text = "登录"

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_kevcj")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
